# alba

./: CMakeLists.txt
src/: alba.h  albarenderer.cpp  albarenderer.h  chess.cpp  chess.h  main.cpp  types.h
